--- a/index.html
+++ b/index.html
@@ -3,19 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <script  defer src="js/main.js"></script>
     <title>Document</title>
+
 </head>
 <body>
-    <!-- header to display the current status
 
-    empty divs for the board
+    <!-- header to display the current status -->
+    <header>Guess The Word and</header>
+    <h2>Fill The Dashes with Correct words</h2>
 
-    6 rows
-    
-    4 columns
+    <!-- empty divs for the rows-->
+    <section id="rows">
+        <!-- row 3 -->
+        <div id="CU0R3"></div>
+        <div id="CU1R3"></div>
+        <div id="CU2R3"></div>
+        <div id="CU3R3"></div>
+        <!-- row 2 -->
+        <div id="CU0R2"></div>
+        <div id="CU1R2"></div>
+        <div id="CU2R2"></div>
+        <div id="CU3R2"></div>
+        <!-- row 1 -->
+        <div id="CU0R1"></div>
+        <div id="CU1R1"></div>
+        <div id="CU2R1"></div>
+        <div id="CU3R1"></div>
+        <!-- row 0 -->
+        <div id="CU0R0"></div>
+        <div id="CU1R0"></div>
+        <div id="CU2R0"></div>
+        <div id="CU3R0"></div> 
+    </section>
 
-    play again button -->
-    
+   <!-- play again button -->
+   <div>
+    <button>Play Again</button>
+   </div>
 
 </body>
 </html>
