--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 
     <!-- header to display the current status -->
-    <header>Guess The Word and</header>
-    <h2>Fill The Dashes with Correct words</h2>
+    <h2>Guess The Words </h2>
 
     <!-- empty divs for the rows-->
     <section id="rows">
