--- a/index.html
+++ b/index.html
@@ -11,34 +11,49 @@
 <body>
 
     <!-- header to display the current status -->
-    <h2>Guess The Words </h2>
+    <div class="header"><h2>Guess The Words </h2></div>
 
     <!-- empty divs for the rows-->
     <section id="rows">
+        <!-- row 5 -->
+        <div id="CU0R5"></div>
+        <div id="CU1R5"></div>
+        <div id="CU2R5"></div>
+        <div id="CU3R5"></div>
+        <div id="CU4R5"></div>
+        <!-- row 4 -->
+        <div id="CU0R4"></div>
+        <div id="CU1R4"></div>
+        <div id="CU2R4"></div>
+        <div id="CU3R4"></div>
+        <div id="CU4R4"></div>
         <!-- row 3 -->
         <div id="CU0R3"></div>
         <div id="CU1R3"></div>
         <div id="CU2R3"></div>
         <div id="CU3R3"></div>
+        <div id="CU4R3"></div>
         <!-- row 2 -->
         <div id="CU0R2"></div>
         <div id="CU1R2"></div>
         <div id="CU2R2"></div>
         <div id="CU3R2"></div>
+        <div id="CU4R2"></div>
         <!-- row 1 -->
         <div id="CU0R1"></div>
         <div id="CU1R1"></div>
         <div id="CU2R1"></div>
         <div id="CU3R1"></div>
+        <div id="CU4R1"></div>
         <!-- row 0 -->
         <div id="CU0R0"></div>
         <div id="CU1R0"></div>
         <div id="CU2R0"></div>
         <div id="CU3R0"></div> 
+        <div id="CU4R0"></div> 
     </section>
 
    <!-- play again button -->
-   <div class="playbtn">
     <button>Play Again</button>
    </div>
 
