--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 
     <!-- header to display the current status -->
-    <div class="header"><h2>WORDLE </h2></div>
+    <div class="header"><h2>WORDLE </h2>
     <hr>
+</div>
     <div id="displayboard">
 
    
