--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <button data-key="b">b</button>
             <button data-key="n">n</button>
             <button data-key="m">m</button>
-            <button class="del" class="d-button">Del</button>
+            <button class="del" class="w-button">Del</button>
         </div>
 </div>
 
