added more readme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
     <!-- header to display the current status -->
+    <div id="result-message"></div>
     <div class="header"><h2>WORDLE </h2>
+
     <hr>
 </div>
     <div id="displayboard">
@@ -55,8 +57,9 @@
             <button data-key="b">b</button>
             <button data-key="n">n</button>
             <button data-key="m">m</button>
-            <button class="del" class="w-button">Del</button>
+            <button data-key="del" class="del">Del</button>
         </div>
+        <button id="new-game-button">New Game</button>
 </div>
 
 
