--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="result-message" class="animate__animated">
        
     </div>
-    <div class="header"><h2>WORDLE </h2>
+   <h2>WORDLE </h2>
 
-    <hr>
+    
 </div>
     <div id="displayboard">
 
